test/types/tuple/errors/genericArrayAsTupleSize.chpl
config param LEN = 1000;
proc main() {
  var d1: [0..#LEN]*int(64);
}
